@@ -13,6 +13,7 @@
 - Improve the robustness of libaudit field encoding functions
 - Add optional ARM processor support
 - Fix autrace to use correct syscalls on i386 systems (Peng Haitao)
+- In auparse, add ability to interpret session and capabilities
 
 1.7.18
 - Update time examples in ausearch/report man pages
